tests/errors/backend/generators/infeasible_bounds.fpcore
; --format UQ8.8
(FPCore (x)
 :calyx-domain (-1 1)
 :calyx-impl (lut 16)
 (exp x))
